Criando função para disparar o cronometro

--- a/index.html
+++ b/index.html
@@ -11,27 +11,10 @@
         
          <h1>Cronômetro Online</h1>
 
-
-        <div class="container">
-            <div class="time">
-                <h2 id="hours">00</h2>
-                <small>horas</small>
-            </div>
-            <div class="time">
-                <h2 id="minutes">00</h2>
-                <small>minutos</small>
-            </div>
-            <div class="time">
-                <h2 id="seconds">00</h2>
-                <small>segundos</small>
-             </div>
-        </div>
-    
-        <div class="botoes">
-            <button onclick="start()">Start</button>
-            <button id="stop">Stop</button>
-            <button id="reset">Reset</button>
-        </div>
+<h2><time>00:00:00</time></h2>
+<button id="strt">Start</button>
+<button id="stp">Stop</button>
+<button id="rst">Reset</button>
 
 <script src="main.js"></script>
 </body>
