Criando função que inicia o cronometro

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        
-         <h1>Cronômetro Online</h1>
-
-<h2><time>00:00:00</time></h2>
-<button id="strt">Start</button>
-<button id="stp">Stop</button>
-<button id="rst">Reset</button>
+         <h1>Cronômetro</h1>
+        <h2 id="timer">00:00:00</h2>
+        <button id="strt" onclick="start">Start</button>
+        <button id="stp" onclick="stop">Stop</button>
+        <button id="rst" onclick="reset">Reset</button>
 
 <script src="main.js"></script>
 </body>
