--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
          <h1>Cronômetro</h1>
         <h2 id="timer">00:00:00</h2>
-        <button id="strt" onclick="start">Start</button>
-        <button id="stp" onclick="stop">Stop</button>
-        <button id="rst" onclick="reset">Reset</button>
+        <button onclick="start()">Start</button>
+        <button onclick="stop()">Stop</button>
+        <button onclick="reset()">Reset</button>
 
 <script src="main.js"></script>
 </body>
