--- a/index.html
+++ b/index.html
@@ -6,14 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronômetro</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-         <h1>Cronômetro</h1>
+    <div class="container">
+        <h1>Cronômetro</h1>
         <h2 id="timer">00:00:00</h2>
-        <button onclick="start()">Start</button>
-        <button onclick="stop()">Stop</button>
-        <button onclick="reset()">Reset</button>
-
+        <button onclick="start()" class="botoes"> 
+            <span class="material-icons">play_arrow</span>
+        </button>
+        <button onclick="stop()" class="botoes">
+            <span class="material-icons">pause</span>
+        </button>
+        <button onclick="reset()" class="botoes">
+            <span class="material-icons">stop</span>
+        </button>
+    </div>
 <script src="main.js"></script>
 </body>
 </html>
